# comp-arch

Project1_CPP/: CMakeCache.txt  CMakeLists.txt  Makefile  cachesim  cmake_install.cmake  run.sh  verify.out  verify.py
Project1_CPP/conf/: big.conf  default.conf  direct.conf  fifo.conf  fullassoc.conf  lfu.conf  mixed.conf  writethrough.conf
Project1_CPP/config/: default.conf
Project1_CPP/src/: cache.cpp  cache.hpp  cachesim_driver.cpp  test.cpp
Project1_CPP/src/util/: jsmn.h
Project2_cpp/: Makefile  procsim.cpp  procsim.hpp  procsim_driver.cpp
